# backups

base prompts for claude/: PROMPT PARA ELABORACION DE DOCUMENTACION SCYPHER.md  Prompt Claude – Generación de guías de entrenamiento.md  Prompt Claude – Training Guide Generation.md
scypher rust electron/: Cargo.toml  README.md  etapa_b7_backup_context.md  plan_b6_security_hardening.md
scypher rust electron/src/: error.rs  lib.rs  main.rs
scypher rust electron/src/addresses/: bitcoin_family.rs  cardano.rs  config_types.rs  ergo.rs  evm_family.rs  helpers.rs  mod.rs  solana.rs  tests.rs  tron.rs
scypher rust electron/src/bip39/: conversion.rs  mod.rs  validation.rs  wordlist.rs
scypher rust electron/src/cli/: args.rs  display.rs  input.rs  menu.rs  mod.rs  output.rs  test_verification.rs
scypher rust electron/src/core/: execution_context.rs  logger.rs  mod.rs
scypher rust electron/src/crypto/: checksum.rs  keystream.rs  xor.rs
scypher rust electron/src/security/: environment.rs  memory.rs  process.rs
scypher-rusr-etapa3-buena-base/: Cargo.toml  plan de implementacion.md
scypher-rusr-etapa3-buena-base/src/: error.rs  main.rs  stub_files.rs
scypher-rusr-etapa3-buena-base/src/security/: mod.rs
scypherV2-EH-Release/: ScypherV2-UI.sh
